# minpack

./: .codecov.yaml  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  README.rst  depend  fpm.toml  index.html  makefile  meson.build  meson_options.txt  minpack.md  search.html
.github/workflows/: CI.yml  fpm.yml  wheel.yml
cmake/: UserOverride.cmake
config/: install-mod.py
config/ci/: docs-env.yaml  fpm-env.yaml  meson-env.yaml  python-env.yaml
ex/: file01  file02  file03  file04  file05  file07  file08  file09  file10  file11  file12  file13  file14  file16  file18  file20
examples/: CMakeLists.txt  example_hybrd.f90  example_hybrd1.f90  example_lmder1.f90  example_lmdif1.f90  example_primes.f90  meson.build
include/: minpack.h
interface/: fcn_hybrj.html  fcn_lmder.html  fcn_lmstr.html  func.html  func2.html  minpack_fcn_hybrj.html  minpack_fcn_lmder.html  minpack_fcn_lmstr.html  minpack_func.html  minpack_func2.html
lists/: absint.html  files.html  modules.html  procedures.html
module/: minpack_capi.html  minpack_kinds.html  minpack_module.html
proc/: chkder.html  dogleg.html  dpmpar.html  enorm.html  fdjac1.html  fdjac2.html  hybrd.html  hybrd1.html  hybrj.html  hybrj1.html  lmder.html  lmder1.html  lmdif.html  lmdif1.html  lmpar.html  lmstr.html  lmstr1.html  minpack_chkder.html  minpack_dpmpar.html  minpack_hybrd.html  minpack_hybrd1.html  minpack_hybrj.html  minpack_hybrj1.html  minpack_lmder.html  minpack_lmder1.html  minpack_lmdif.html  minpack_lmdif1.html  minpack_lmstr.html  minpack_lmstr1.html  qform.html  qrfac.html  qrsolv.html  r1mpyq.html  r1updt.html  rwupdt.html
python/: README.rst  ffi-builder.py  meson.build  meson_options.txt  mesonpep517.toml  setup.cfg  setup.py
python/include/: _minpack.h
python/minpack/: __init__.py  exception.py  library.py  meson.build  test_library.py  typing.py
scripts/: validate.sh
sourcefile/: minpack.f90.html  minpack_capi.f90.html  minpack_kinds.f90.html
src/: CMakeLists.txt  dpmpar.f  enorm.f90  minpack.f  minpack.f90  minpack_capi.f90  minpack_kinds.f90  minpack_legacy.f90
test/: file15.f  file15.f90  file15_module.f90  file16.f90  file17.f  file17.f90  file19.f90  file20.f90  file22_module.f90  file23_module.f90  meson.build  test_chkder.f90  test_hybrd.f90  test_hybrj.f90  test_lmder.f90  test_lmdif.f90  test_lmstr.f90
test/api/: tester.c  testsuite.h
tipuesearch/: tipuesearch_content.js
