option(
  'api',
  type: 'boolean',
  value: true,
  description: 'Export bindings for the C API',
)
option(
  'python',
  type: 'boolean',
  value: false,
  description: 'Build Python extension module',
)
option(
  'python_version',
  type: 'string',
  value: 'python3',
  description: 'Python version to link against.',
)
