[metadata]
name = minpack
version = 2.0.0
desciption = Python bindings for MINPACK
long_desciption = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/fortran-lang/minpack
license = MIT
license_files =
    ../LICENSE.txt
classifiers =
    Development Status :: 5 - Production
    Intended Audience :: Science/Research
    Programming Language :: Fortran
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    cffi
    numpy
tests_require =
    pytest
    pytest-cov
python_requires = >=3.6

[coverage:run]
omit =
    */test_*.py

[aliases]
test = pytest
